Fixed spacing issue in contact form (again)

--- a/style/index.css
+++ b/style/index.css
@@ -480,6 +480,9 @@ section {
 
 .footer-contact-form > * {
 	margin-bottom: 20px;
+}
+
+.footer-contact-form > input, .footer-contact-form > textarea {
 	padding: 10px 10px;
 	border: 1px rgb(216, 216, 216) solid;
 	border-radius: var(--boxRadius);
